Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24289

show grants missing with grant

    XMLWordPrintable

Details

    Description

      create role MariaDB_admin;
      GRANT SELECT, UPDATE, DELETE, ALTER ON *.* TO 'MariaDB_admin' WITH GRANT OPTION;
      SHOW GRANTS for 'MariaDB_admin';
      Grants for MariaDB_admin
      GRANT SELECT, UPDATE, DELETE, ALTER ON *.* TO 'MariaDB_admin 
      

      Attachments

        Issue Links

          Activity

            People

              anel Anel Husakovic
              anel Anel Husakovic
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.