MDEV-24289: show grants missing with grant option

Reviewed by:serg@mariadb.com